config/manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-insight-controller
  namespace: k8s-insight-system
spec:
  ingressClassName: traefik
  rules:
    - host: k8s-insight.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-insight-controller
                port:
                  name: web
